another css fix for safari in app browser on ios

--- a/src/styles.css
+++ b/src/styles.css
@@ -429,7 +429,7 @@
   height: 40px;
   position: absolute;
   bottom: 0;
-  right: 15px;
+  right: 18px;
   animation: add-to-homescreen-inappbrowser-openinsafari-bouncing-arrow-animation 1.5s infinite;
 }
 
